Fix contrast

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -10,9 +10,11 @@
 
 .academia {
   background-color: #4e9ad6;
+  filter: contrast(150%);
 }
 
 .bookclone {
+  filter: contrast(137%);
   background-color: #2a8dff;
 }
 
@@ -21,6 +23,7 @@
 }
 
 .dari {
+  filter: contrast(112%);
   background-color: #d35649;
 }
 
@@ -29,6 +32,7 @@
 }
 
 .newsweek {
+  filter: contrast(113%);
   background-color: #ff0000;
 }
 
@@ -37,6 +41,7 @@
 }
 
 .github {
+  filter: contrast(122%);
   background-color: #282c34;
 }
 
@@ -99,6 +104,7 @@ header {
   padding: 10px 20px;
   font-weight: bold;
   outline: none;
+  filter: contrast(120%);
 }
 
 .header .contact:hover {
